--- a/index.html
+++ b/index.html
@@ -2,41 +2,50 @@
 <html>
 <head data-cast-api-enabled="true">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>videojs-chromecast Demo</title>
     <link href="/node_modules/video.js/dist/video-js.css" rel="stylesheet">
     <link href="/dist/videojs-chromecast.css" rel="stylesheet">
-    <script src="/node_modules/video.js/dist/video.js"></script>
-    <script src="/dist/videojs-chromecast.js"></script>
 </head>
 <body>
-<video class="video-js vjs-default-skin" controls width="640px" height="360px" crossorigin="anonymous"
-       poster="http://content.bitsontherun.com/thumbs/3XnJSIm4-480.jpg">
-    <!--<track kind="captions" src="//playertest.longtailvideo.com/captions/bunny-en.srt" srclang="en"-->
-    <!--label="English"/>-->
-    <!--<track kind="captions" src="https://www.mynetworktv.com/player/demo.captions.vtt" srclang="en"-->
-    <!--label="English"/>-->
-    <!--<track kind="chapters" src="//playertest.longtailvideo.com/chapters/bunny-chapters.vtt">-->
-    <track kind="captions" src="./node_modules/video.js/dist/examples/shared/example-captions.vtt" srclang="fr"
-           label="Francais" default/>
-    <!--Tracks need an ending tag thanks to IE9-->
-    <track kind="captions" src="./node_modules/video.js/dist/examples/shared/example-captions.vtt" srclang="en"
-           label="English"/>
-    <source src="//content.bitsontherun.com/videos/bkaovAYt-52qL9xLP.mp4" type="video/mp4">
-    <source src="//content.bitsontherun.com/videos/bkaovAYt-27m5HpIu.webm" type="video/webm">
-</video>
-<ul>
-    <li><a href="/test/">Run unit tests in browser.</a></li>
-</ul>
+<div style="position: relative; display: block;">
+  <div style="padding-top: 56.25%;">
+    <video data-video-id="5679460295001" 
+           data-account="4289043293001" 
+           data-player="S1dJtqS5Z" 
+           data-embed="default" 
+           data-application-id 
+           class="video-js vjs-default-skin" 
+           controls 
+           style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; width: 100%; height: 100%;"></video>
+  </div>
+</div>
 <!-- chromecast sdk -->
+<script src="//players.brightcove.net/4289043293001/S1dJtqS5Z_default/index.min.js"></script>
 <script src="http://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
+<script src="/node_modules/video.js/dist/video.js"></script>
+<script src="/dist/videojs-chromecast.js"></script>
 <script>
 
-    var player = videojs(document.querySelector('video'), {
-        language: 'fr',
-        plugins: {
-            chromecast: {}
+    function waitForElementToDisplay(selector, time) {
+        if(document.querySelector(selector)!=null) {
+            videojs(document.querySelector('video'), {
+                plugins: {
+                    chromecast: {
+                      appId: 'E2DDCEB5'
+                    }
+                }
+            });
+            console.log("The element is displayed, you can put your code instead of this alert.")
+            return;
         }
-    }).toJSON();
+        else {
+            setTimeout(function() {
+                waitForElementToDisplay(selector, time);
+            }, time);
+        }
+    }
+    waitForElementToDisplay('#vjs_video_3', 1000);
 
 </script>
 </body>
